--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "@types/leaflet-draw": "^1.0.13",
     "cesium": "^1.136.0",
+    "csv-parse": "^6.1.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "lucide-react": "^0.559.0",
