--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "excel-to-json": "node scripts/excelToJson.js"
+    "excel-to-json": "node scripts/excelToJson.js",
+    "convert:gas-excel": "node scripts/convertGasExcelToJson.js",
+    "convert:soil-excel": "node scripts/convertSoilExcelToJson.js",
+    "convert:elevation-excel": "node scripts/convertElevationExcelToJson.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
@@ -16,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "@types/leaflet-draw": "^1.0.13",
     "cesium": "^1.136.0",
+    "csv-parse": "^6.1.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "lucide-react": "^0.559.0",
